2015/day-3/src/snapshots/day_3__tests__parse_position_and_presents-3.snap
---
source: 2015/day-3/src/main.rs
expression: "parse_position_and_presents(\"^v^v^v^v^v\")"
---
{
    Loc {
        x: 0,
        y: 0,
    }: 6,
    Loc {
        x: 0,
        y: -1,
    }: 5,
}
